--- a/gene-level-expression/index.html
+++ b/gene-level-expression/index.html
@@ -36,6 +36,10 @@
 
 </head>
 
-<body></body> 
-
+<body>
+	<div id="expression_panel"></div>
+	<form id="expression_param" action="" method="post">
+		<input type="hidden" id="featureId" name="featureId" value="32115127" />
+	</form>
+</body> 
 </html>
