modified default param setting

--- a/gene-level-expression/test.html
+++ b/gene-level-expression/test.html
@@ -19,7 +19,8 @@
 <body>
 	<div id="expression_panel"></div>
 	<form id="expression_param" action="" method="post">
-		<input type="hidden" id="featureId" name="featureId" value="32115127" />
+		<input type="hidden" id="featureId" name="featureId" value="18348942" />
+		<input type="hidden" id="exp_geneId" name="exp_geneId" value="2084088,2089857,2315402,2346996,2352892,2384999,3232738,3414653,3429796,3469653,3628859,3683621,3704610,3722703,4037519,4043486" />
 	</form>
 </body> 
 </html>
