working version by May 1st

--- a/gene-level-expression/index.html
+++ b/gene-level-expression/index.html
@@ -39,12 +39,9 @@
 	<div id="expression_panel"></div>
 	<form id="expression_param" action="" method="post">
 		<input type="hidden" id="featureId" name="featureId" value="18348942" /><!--//18348942 -->
-		<input type="hidden" id="exp_geneId" name="exp_geneId" value="2084088,2089857,2315402,2346996,2352892,2384999,3232738,3414653,3429796,3469653,3628859,3683621,3704610,3722703,4037519,4043486" /><!--//2346996, 2352892, 2384999, 3704610-->
-		<!--
-		<input type="hidden" id="param_keyword" value="" />
-		<input type="hidden" id="param_foldchange" value="" />
-		<input type="hidden" id="param_accession" />
-		<input type="hidden" id="" value="" /> -->
+		<input type="hidden" id="sampleId" name="sampleId" value="" /><!--//4530865, 6371698, 6377673, 4530865, 4536336, 5812470, 5866846, 5886333, 5901006, 5906495, 5911984, 5917473, 5922962, 5928451, 5933940, 5939429, 5944908, 5950397-->
+		<input type="hidden" id="filter" name="filter" value="" />
+		<input type="hidden" id="cutoff" name="cutoff" value="" />
 	</form>
 </body> 
 </html>
