changed extjs version & added default params

--- a/gene-level-expression/index.html
+++ b/gene-level-expression/index.html
@@ -9,9 +9,12 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
 <!-- load ExtJS framework -->
+<!--
 <link rel="stylesheet" type="text/css" href="/patric/js/extjs4/resources/css/ext-all.css"/>
-<script type="text/javascript" src="/patric/js/extjs4/ext-all.js"></script>
+<script type="text/javascript" src="/patric/js/extjs4/ext-all.js"></script>-->
 
+<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.0-gpl/resources/css/ext-all.css"/>
+<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.0-gpl/ext-all.js"></script>
 
 <!-- where the magic really happens -->
 <script type="text/javascript" src="app.js"></script>
@@ -38,10 +41,10 @@
 <body>
 	<div id="expression_panel"></div>
 	<form id="expression_param" action="" method="post">
-		<input type="hidden" id="featureId" name="featureId" value="18348942" /><!--//18348942 -->
-		<input type="hidden" id="sampleId" name="sampleId" value="" /><!--//4530865, 6371698, 6377673, 4530865, 4536336, 5812470, 5866846, 5886333, 5901006, 5906495, 5911984, 5917473, 5922962, 5928451, 5933940, 5939429, 5944908, 5950397-->
-		<input type="hidden" id="filter" name="filter" value="" />
-		<input type="hidden" id="cutoff" name="cutoff" value="" />
+		<input type="hidden" id="featureId" name="featureId" value="32115101" /><!--//32115101 -->
+		<input type="hidden" id="sampleId" name="sampleId" value="" /><!--//3936868,3941538,3946210,3950882,3955554,3960226,3964898,3969570,3974242,3983584,3988254,3918180,3927524,3978914,3992924,3922852,39321967-->
+		<input type="hidden" id="log_ratio" name="log_ratio" value="1" />
+		<input type="hidden" id="zscore" name="zscore" value="" />
 	</form>
 </body> 
 </html>
