--- a/gene-level-expression/test.html
+++ b/gene-level-expression/test.html
@@ -19,11 +19,11 @@
 <body>
 	<div id="expression_panel"></div>
 	<form id="expression_param" action="" method="post">
-		<input type="hidden" id="featureId" name="featureId" value="18348942" /><!--//18348942 -->
-		<input type="hidden" id="sampleId" name="sampleId" value="" /><!--//4530865, 6371698, 6377673, 4530865, 4536336, 5812470, 5866846, 5886333, 5901006, 5906495, 5911984, 5917473, 5922962, 5928451, 5933940, 5939429, 5944908, 5950397 -->
-		<input type="hidden" id="filter" name="filter" value="" />
-		<input type="hidden" id="cutoff" name="cutoff" value="" />
-
+		<input type="hidden" id="featureId" name="featureId" value="32115101" /><!--//32115101 -->
+		<input type="hidden" id="sampleId" name="sampleId" value="" /><!--//3936868,3941538,3946210,3950882,3955554,3960226,3964898,3969570,3974242,3983584,3988254,3918180,3927524,3978914,3992924,3922852,39321967-->
+		<input type="hidden" id="log_ratio" name="log_ratio" value="1" />
+		<input type="hidden" id="zscore" name="zscore" value="" />
 	</form>
 </body> 
+
 </html>
