--- a/transcriptomics-upload/index.html
+++ b/transcriptomics-upload/index.html
@@ -14,11 +14,15 @@
 
 <script type="text/javascript">
 	Ext.Loader.setConfig({enabled: true});
+	function launch() {
+		uploader = Ext.create('TranscriptomicsUploader.view.Viewport',{}).show();
+		//uploader = Ext.create('TranscriptomicsUploader',{}).show();
+	}
 </script>
 
 </head>
 
 <body>
-	<div id="target_panel"></div>
+	<input type="button" onclick="launch()" value="Click here to launch Uploader Window">
 </body> 
 </html>
