changed naming convention from *.debug.js, *.js to *.js and *.min.js

--- a/gene-level-expression/test.html
+++ b/gene-level-expression/test.html
@@ -14,7 +14,7 @@
 
 
 <!-- where the magic really happens -->
-<script type="text/javascript" src="GeneExpression.js"></script>
+<script type="text/javascript" src="GeneExpression.min.js"></script>
 </head>
 <body>
 	<div id="expression_panel"></div>
