--- a/transcriptomics-upload/test.html
+++ b/transcriptomics-upload/test.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 
 <link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
-<script type="text/javascript" src="TranscriptomicsUpload.debug.js"></script>
+<script type="text/javascript" src="TranscriptomicsUpload.min.js"></script>
 <!--
 <script type="text/javascript">
 	Ext.Loader.setConfig({enabled: true});
