minor tweaks and modification for column name changes

--- a/gene-level-expression/index.html
+++ b/gene-level-expression/index.html
@@ -31,9 +31,9 @@
 <body>
 	<div id="expression_panel"></div>
 	<form id="expression_param" action="" method="post">
-		<input type="hidden" id="featureId" name="featureId" value="32115101" /><!--//32115101 -->
+		<input type="hidden" id="featureId" name="featureId" value="32116481" /><!--//32115101 -->
 		<input type="hidden" id="sampleId" name="sampleId" value="" /><!--//3936868,3941538,3946210,3950882,3955554,3960226,3964898,3969570,3974242,3983584,3988254,3918180,3927524,3978914,3992924,3922852,39321967-->
-		<input type="hidden" id="log_ratio" name="log_ratio" value="1" />
+		<input type="hidden" id="log_ratio" name="log_ratio" value="" />
 		<input type="hidden" id="zscore" name="zscore" value="" />
 	</form>
 </body> 
