--- a/gene-level-expression/index.html
+++ b/gene-level-expression/index.html
@@ -36,5 +36,11 @@
 		<input type="hidden" id="log_ratio" name="log_ratio" value="" />
 		<input type="hidden" id="zscore" name="zscore" value="" />
 	</form>
+	<form id="fTableForm" action="" method="post">
+		<input type="hidden" id="tablesource" name="tablesource" value="" />
+		<input type="hidden" id="fileformat" name="fileformat" value="" />
+		<input type="hidden" id="fids" name="fids" value="" />	
+		<input type="hidden" id="idType" name="idType" value="" />
+	</form>
 </body> 
 </html>
