--- a/genome-selector/index.html
+++ b/genome-selector/index.html
@@ -9,26 +9,29 @@
 <link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
 <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 
-<script type="text/javascript" src="../tri-state-tree/TriStateTree.debug.js"></script>
-<script type="text/javascript" src="./GenomeSelector.debug.js"></script>
+<script type="text/javascript" src="../tri-state-tree/TriStateTree.js"></script>
+<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript">
+	Ext.Loader.setConfig({enabled: true});
+</script>
 <link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
 
 <script type="text/javascript">
 var tabs;
 
 Ext.onReady(function(){
-	tabs = Ext.create('VBI.GenomeSelector.Panel', {
-		renderTo: 'GenomeSelector',
+	tabs = Ext.create('VBI.GenomeSelector.view.ViewPort', {
+		renderTo: 'GenomeSelectorDiv',
+		id:'genome_selector',
 		width: 400,
 		height: 550,
 		border:false,
 		parentTaxon: 356 /* 2, 1224, 28211, 356, 234*/
 	});	
 });
-
 </script>
 </head>
 <body>
-<div id="GenomeSelector" /> 
+	<div id="GenomeSelectorDiv" /> 
 </body>
 </html>
