--- a/transcriptomics-upload/index.html
+++ b/transcriptomics-upload/index.html
@@ -1,25 +1,22 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html>
+<!DOCTYPE html>
+<html lang='en'>
 <head>
-<title>Trasnscriptomics Upload prototype</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<title>Trasnscriptomics Upload prototype</title>
+	<meta charset="utf-8">
+	
+	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
+	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 
-<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
-<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
+	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
+	<script type="text/javascript" src="app.js"></script>
 
-<link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
-<script type="text/javascript" src="app.js"></script>
-
-<script type="text/javascript">
-	Ext.Loader.setConfig({enabled: true});
-	function launch() {
-		uploader = Ext.create('TranscriptomicsUploader.view.Viewport',{"params":{"metaData":{"data_type":"Phenomics"}}}).show();
-		//uploader = Ext.create('TranscriptomicsUploader',{}).show();
-	}
-</script>
-
+	<script type="text/javascript">
+		Ext.Loader.setConfig({enabled: true});
+		function launch() {
+			uploader = Ext.create('TranscriptomicsUploader.view.Viewport',{"params":{"metaData":{"data_type":"Phenomics"}}}).show();
+			//uploader = Ext.create('TranscriptomicsUploader',{}).show();
+		}
+	</script>
 </head>
 
 <body>
