--- a/transcriptomics-upload/test.html
+++ b/transcriptomics-upload/test.html
@@ -1,26 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html>
+<!DOCTYPE html>
+<html lang='en'>
 <head>
-<title>Trasnscriptomics Upload prototype</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<title>Trasnscriptomics Upload prototype</title>
+	<meta charset="utf-8">
 
-<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
-<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
+	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 
-<link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
-<script type="text/javascript" src="TranscriptomicsUpload.min.js"></script>
-<!--
-<script type="text/javascript">
-	Ext.Loader.setConfig({enabled: true});
-</script>
--->
-<script type="text/javascript">
-function launch() {
-	uploader = Ext.create('TranscriptomicsUploader.view.Viewport',{}).show();
-}
-</script>
+	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
+	<script type="text/javascript" src="TranscriptomicsUpload.min.js"></script>
+	<!--
+	<script type="text/javascript">
+		Ext.Loader.setConfig({enabled: true});
+	</script>
+	-->
+	<script type="text/javascript">
+	function launch() {
+		uploader = Ext.create('TranscriptomicsUploader.view.Viewport',{}).show();
+	}
+	</script>
 </head>
 
 <body>
