--- a/transcriptomics-upload/index.html
+++ b/transcriptomics-upload/index.html
@@ -3,12 +3,12 @@
 <head>
 	<title>Trasnscriptomics Upload prototype</title>
 	<meta charset="utf-8">
-	
-	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
-	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
+
+	<script src="//cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
+	<link rel="stylesheet" href="//cdn.sencha.io/ext/gpl/4.2.1/resources/css/ext-all.css">
 
 	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
-	<script type="text/javascript" src="app.js"></script>
+	<script src="app.js"></script>
 
 	<script type="text/javascript">
 		Ext.Loader.setConfig({enabled: true});
