compatible with p3 ID scheme

--- a/gene-level-expression/index.html
+++ b/gene-level-expression/index.html
@@ -5,9 +5,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-
+<!--
 	<script src="//cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
 	<link rel="stylesheet" href="//cdn.sencha.io/ext/gpl/4.2.1/resources/css/ext-all.css">
+-->
+	<script src="/patric/js/extjs/extjs/ext-all.js"></script>
+	<link rel="stylesheet" href="/patric/js/extjs/extjs/resources/css/ext-all.css">
 
 	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
 	<script type="text/javascript" src="app.js"></script>
@@ -31,7 +34,7 @@
 <body>
 	<div id="expression_panel"></div>
 	<form id="expression_param" action="" method="post">
-		<input type="hidden" id="featureId" name="featureId" value="32116481" /><!--//32115101 -->
+		<input type="hidden" id="featureId" name="featureId" value="PATRIC.83332.12.NC_000962.CDS.34.1524.fwd" /><!--//32115101 -->
 		<input type="hidden" id="sampleId" name="sampleId" value="" /><!--//3936868,3941538,3946210,3950882,3955554,3960226,3964898,3969570,3974242,3983584,3988254,3918180,3927524,3978914,3992924,3922852,39321967-->
 		<input type="hidden" id="log_ratio" name="log_ratio" value="" />
 		<input type="hidden" id="zscore" name="zscore" value="" />
